--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1=name
+  input#date(type='hidden', value=date)
+  span#countdown
 
+  script(src='/javascripts/countdown.js')
   script(src='/javascripts/index.js')
