--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,3 +8,18 @@ body {
 a {
   color: #00B7FF;
 }
+
+.module--date-countdown .module__title {
+  margin: 0;
+}
+.module--date-countdown .progress-meter .background {
+  fill: #282828;
+}
+.module--date-countdown .progress-meter .foreground {
+  fill: #fff;
+}
+.module--date-countdown .progress-meter text {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 30px;
+  fill: #fff;
+}
