--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,16 +1,15 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: #0D0D0D;
-  color: #FFFFFF;
-}
-
-a {
-  color: #00B7FF;
+.module--date-countdown {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
 }
 
 .module--date-countdown .module__title {
-  margin: 0;
+  margin: 0 0 20px 0;
+  font-size: 40px;
+  color:#fff;
+  font-family: Lato;
 }
 .module--date-countdown .progress-meter .background {
   fill: #282828;
