--- a/views/index.jade
+++ b/views/index.jade
@@ -3,12 +3,10 @@ extends layout
 block content
   .module.module--date-countdown
     .module__header
-      h2.module__title
-        img(src='/resource/images/content/title-date-countdown.jpg')
+      h2.module__title=nextEvent.name
     .module__body
       .js-donut-graph
 
-  h1=nextEvent.name
   input.js-date(type='hidden', value=nextEvent.date, data-start-date=lastEventDate)
 
   script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
