--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,9 +7,11 @@
 
 .module--date-countdown .module__title {
   margin: 0 0 20px 0;
-  font-size: 40px;
-  color:#fff;
   font-family: Lato;
+  font-weight: normal;
+  font-size: 36px;
+  color:#fff;
+  text-transform: uppercase;
 }
 .module--date-countdown .progress-meter .background {
   fill: #282828;
@@ -19,6 +21,7 @@
 }
 .module--date-countdown .progress-meter text {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 30px;
+  font-size: 24px;
+  text-transform: uppercase;
   fill: #fff;
 }
