--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,6 @@ html
   head
     title= title
     link(href='http://fonts.googleapis.com/css?family=Lato:100,400,700,900', rel='stylesheet', type='text/css')
-    link(rel='stylesheet', href='/stylesheets/index.css')
+    link(rel='stylesheet', href=versionPath('/stylesheets/index.css'))
   body
     block content
