--- a/public/stylesheets/index.styl
+++ b/public/stylesheets/index.styl
@@ -20,7 +20,7 @@
   fill: #fff;
 }
 .module--date-countdown .progress-meter text {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "FS Emeric Book", Helvetica, Arial, sans-serif;
   font-size: 24px;
   text-transform: uppercase;
   fill: #fff;
