Adding font family FS Emeric Book

--- a/public/stylesheets/index.styl
+++ b/public/stylesheets/index.styl
@@ -7,7 +7,7 @@
 
 .module--date-countdown .module__title {
   margin: 0 0 20px 0;
-  font-family: Lato;
+  font-family: "FS Emeric Book";
   font-weight: normal;
   font-size: 36px;
   color:#fff;
